--- a/Introducción_a_Google_Colab.ipynb
+++ b/Introducción_a_Google_Colab.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Introducción a Google Colab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMvtr7BAk0Kgze3yjS8oSRh",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN3QgpJAiLwe1is9JzLrkdI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,6 +66,264 @@
         "$$\r\n",
         "\\int_0^\\infty x^2dx\r\n",
         "$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SX-uIzWfJefD"
+      },
+      "source": [
+        "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        },
+        "id": "0EkiPdgVJg0A",
+        "outputId": "dd43bc6c-4153-45ac-b234-65095ab2b1f1"
+      },
+      "source": [
+        "url = (\"https://raw.githubusercontent.com/luislemuspaz/Ciencia-de-Datos-en-Python/master/marketing_data.csv\")\r\n",
+        "df = pd.read_csv(url)\r\n",
+        "df.head()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Year_Birth</th>\n",
+              "      <th>Education</th>\n",
+              "      <th>Marital_Status</th>\n",
+              "      <th>Income</th>\n",
+              "      <th>Kidhome</th>\n",
+              "      <th>Teenhome</th>\n",
+              "      <th>Dt_Customer</th>\n",
+              "      <th>Recency</th>\n",
+              "      <th>MntWines</th>\n",
+              "      <th>MntFruits</th>\n",
+              "      <th>MntMeatProducts</th>\n",
+              "      <th>MntFishProducts</th>\n",
+              "      <th>MntSweetProducts</th>\n",
+              "      <th>MntGoldProds</th>\n",
+              "      <th>NumDealsPurchases</th>\n",
+              "      <th>NumWebPurchases</th>\n",
+              "      <th>NumCatalogPurchases</th>\n",
+              "      <th>NumStorePurchases</th>\n",
+              "      <th>NumWebVisitsMonth</th>\n",
+              "      <th>AcceptedCmp3</th>\n",
+              "      <th>AcceptedCmp4</th>\n",
+              "      <th>AcceptedCmp5</th>\n",
+              "      <th>AcceptedCmp1</th>\n",
+              "      <th>AcceptedCmp2</th>\n",
+              "      <th>Response</th>\n",
+              "      <th>Complain</th>\n",
+              "      <th>Country</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1826</td>\n",
+              "      <td>1970</td>\n",
+              "      <td>Graduation</td>\n",
+              "      <td>Divorced</td>\n",
+              "      <td>$84,835.00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6/16/14</td>\n",
+              "      <td>0</td>\n",
+              "      <td>189</td>\n",
+              "      <td>104</td>\n",
+              "      <td>379</td>\n",
+              "      <td>111</td>\n",
+              "      <td>189</td>\n",
+              "      <td>218</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>SP</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1961</td>\n",
+              "      <td>Graduation</td>\n",
+              "      <td>Single</td>\n",
+              "      <td>$57,091.00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6/15/14</td>\n",
+              "      <td>0</td>\n",
+              "      <td>464</td>\n",
+              "      <td>5</td>\n",
+              "      <td>64</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>37</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7</td>\n",
+              "      <td>3</td>\n",
+              "      <td>7</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>CA</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>10476</td>\n",
+              "      <td>1958</td>\n",
+              "      <td>Graduation</td>\n",
+              "      <td>Married</td>\n",
+              "      <td>$67,267.00</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5/13/14</td>\n",
+              "      <td>0</td>\n",
+              "      <td>134</td>\n",
+              "      <td>11</td>\n",
+              "      <td>59</td>\n",
+              "      <td>15</td>\n",
+              "      <td>2</td>\n",
+              "      <td>30</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "      <td>5</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>US</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1386</td>\n",
+              "      <td>1967</td>\n",
+              "      <td>Graduation</td>\n",
+              "      <td>Together</td>\n",
+              "      <td>$32,474.00</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>05/11/2014</td>\n",
+              "      <td>0</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>AUS</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5371</td>\n",
+              "      <td>1989</td>\n",
+              "      <td>Graduation</td>\n",
+              "      <td>Single</td>\n",
+              "      <td>$21,474.00</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>04/08/2014</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>16</td>\n",
+              "      <td>24</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0</td>\n",
+              "      <td>34</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>7</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>SP</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      ID  Year_Birth   Education  ... Response Complain  Country\n",
+              "0   1826        1970  Graduation  ...        1        0       SP\n",
+              "1      1        1961  Graduation  ...        1        0       CA\n",
+              "2  10476        1958  Graduation  ...        0        0       US\n",
+              "3   1386        1967  Graduation  ...        0        0      AUS\n",
+              "4   5371        1989  Graduation  ...        1        0       SP\n",
+              "\n",
+              "[5 rows x 28 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
       ]
     }
   ]
